<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddQuestionActivity">

<TextView
    android:id="@+id/dulica_denisa_title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/create_a_new_question"
    android:textSize="32dp"
    android:layout_marginTop="32dp"
    android:textAlignment="center"
    app:layout_constraintTop_toTopOf="parent"
    >
</TextView>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dulica_denisa_add_til_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/dulica_denisa_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="32dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dulica_denisa_add_tie_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_tv_write_the_question"
                android:inputType="text"
                >

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dulica_denisa_add_til_correct_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/dulica_denisa_add_til_answers"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="8dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dulica_denisa_add_tie_correct_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_write_the_correct_answer"
                android:inputType="text"
                >

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dulica_denisa_add_til_answers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/dulica_denisa_add_til_question"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dulica_denisa_add_tie_answers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_write_answers"
            android:inputType="text"
            >

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/dulica_denisa_add_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_the_level_of_difficulty"
            app:layout_constraintTop_toBottomOf="@+id/dulica_denisa_add_til_correct_answer"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="16dp"
            android:textSize="16dp"
            >
        </TextView>

        <Spinner
            android:id="@+id/dulica_denisa_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/difficult"
            android:minHeight="48dp"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@+id/dulica_denisa_add_tv"
            >

        </Spinner>


        <Button
            android:id="@+id/dulica_denisa_add_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/add_save_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="32dp"
            >

        </Button>


</androidx.constraintlayout.widget.ConstraintLayout>