<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.LearnFragment">

    <TextView
        android:id="@+id/dulica_denisa_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_learn"
        android:textSize="32dp"
        android:layout_marginTop="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

    </TextView>
    <CheckBox
        android:id="@+id/dulica_denisa_learn_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dulica_denisa_tv_title"
        android:layout_marginTop="16dp"
        android:text="@string/see_the_questions_in_descending_order_of_difficulty"
        >
    </CheckBox>

    <TextView
        android:id="@+id/dulica_denisa_tv_title_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/see_questions"
        android:textSize="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/dulica_denisa_learn_checkbox"
        >
    </TextView>

    <Spinner
        android:id="@+id/dulica_denisa_learn_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/dulica_denisa_tv_title_question"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:minHeight="48dp"
        android:layout_margin="8dp"
        >

    </Spinner>



</androidx.constraintlayout.widget.ConstraintLayout>